src/objects/ShopInformation__c.object
<CustomObject>
    <description>Shoppers</description>
    <fields>
        <fullName>AccountServiceChargeNoTaxFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>「サービス料別表示制御」は「2」で定義されている場合、該当フラグ定義により、サービス料税込み・税抜き切替できる
TRUE：サービス料は税抜き金額を出力する
FALSE:サービス料は税込みき金額を出力する(デフォルト値)</inlineHelpText>
        <label>サービス料税抜表示フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>住所</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BathTaxAccMstRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>該当店舗の入湯税商品を設定する
共有定義「入湯税自動入力フラグ2」が「2」で設定場合、下記関連処理を行う
1.該当項目を設定される場合、OTA取り込みに従って、プランを自動作成作成際に、該当設定値でプランの入湯税項目に設定する
2.該当項目を設定されない場合、OTA取り込みに従って、プランを自動作成作成際に、共通定義「入湯税商品コード」でプランの入湯税項目に設定する</inlineHelpText>
        <label>入湯税</label>
        <referenceTo>AccountMaster__c</referenceTo>
        <relationshipLabel>店舗情報</relationshipLabel>
        <relationshipName>BathTaxAccMstRef</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ColorRSRoomAssigned__c</fullName>
        <inlineHelpText>店舗別のルームインジケータ画面のステータス「割当済」の色設定用、デフォルト値：#00ccff
設定例：royalblue</inlineHelpText>
        <label>色_ルームインジケータ_割当済</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColorRSRoomBad__c</fullName>
        <inlineHelpText>店舗別のルームインジケータ画面のステータス「故障」の色設定用、デフォルト値：#2554C7
設定例：gray</inlineHelpText>
        <label>色_ルームインジケータ_故障</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColorRSRoomChkOutDay__c</fullName>
        <inlineHelpText>店舗別のルームインジケータ画面のステータス「出発予定」の色設定用、デフォルト値：#FDD017 
設定例：gold</inlineHelpText>
        <label>色_ルームインジケータ_出発予定</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColorRSRoomChkOut__c</fullName>
        <inlineHelpText>店舗別のルームインジケータ画面のステータス「出発」の色設定用、デフォルト値：#F75D59
設定例：coral</inlineHelpText>
        <label>色_ルームインジケータ_出発</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColorRSRoomNoClean__c</fullName>
        <inlineHelpText>店舗別のルームインジケータ画面のステータス「未清掃」の色設定用、デフォルト値：#B0C4DE
設定例：lightsteelblue</inlineHelpText>
        <label>色_ルームインジケータ_未清掃</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColorRSRoomOut__c</fullName>
        <inlineHelpText>店舗別のルームインジケータ画面のステータス「外出」の色設定用、デフォルト値：#DB7093 
設定例：darksalmon</inlineHelpText>
        <label>色_ルームインジケータ_外出</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColorRSRoomStay__c</fullName>
        <inlineHelpText>店舗別のルームインジケータ画面のステータス「滞在」の色設定用、デフォルト値：#90EE90
設定例：limegreen</inlineHelpText>
        <label>色_ルームインジケータ_滞在</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>メール</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>EnglishTaxLabel__c</fullName>
        <defaultValue>$Setup.CommDefine__c.EnglishTaxLabel__c</defaultValue>
        <label>内消費税英語表示文言</label>
        <length>28</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExpoIsOpenBuyHistoryFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>施設側EXPOから商品購入履歴を公開する・しないフラグ
TRUE:公開しない
FALSE:公開する（デフォルト）</inlineHelpText>
        <label>Expo購入履歴非公開</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExpoOrgInfoRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Expo組織情報</label>
        <referenceTo>ExpoOrgInfo__c</referenceTo>
        <relationshipLabel>店舗情報</relationshipLabel>
        <relationshipName>ExpoOrgInfoRefs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FacilityCode__c</fullName>
        <defaultValue>$Setup.CommDefine__c.FacilityCode__c</defaultValue>
        <inlineHelpText>該当コードで、会計書のレイアウトを切り替え制御する
該当項目に非設定する場合、共通定義の「施設コード」項目設定で制御を行う</inlineHelpText>
        <label>施設コード</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Payee1__c</fullName>
        <label>振込先１</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payee2__c</fullName>
        <label>振込先２</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payee3__c</fullName>
        <label>振込先３</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PayeeAcount__c</fullName>
        <label>振込先口座</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PeopleDefault__c</fullName>
        <inlineHelpText>店舗別のラックレート設定の人数デフォルト値(1〜10)</inlineHelpText>
        <label>ラックレート人数デフォルト値</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>電話</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Post__c</fullName>
        <label>郵政編号</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RoomScheduleTimerMinute__c</fullName>
        <inlineHelpText>タイムテーブル画面情報を自動更新間隔分数 
インターバルタイマの設定値は1以上を設定ください
インターバルタイマの設定値は0 又は 空白に設定する場合、自動更新を行わない</inlineHelpText>
        <label>タイムテーブルページ更新のインターバルタイマ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Seq__c</fullName>
        <label>Seq#</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ServiceChargeIsShow__c</fullName>
        <defaultValue>&quot;0&quot;</defaultValue>
        <inlineHelpText>会計書(施設コード33/34) 、請求書、見積書にサービス料合計金額は利用明細に表示する・しない制御 
0/空欄：サービス料合計金額は明細行に追加表示しない（デフォルト値） 
1：サービス料合計金額は明細行に追加表示 
2：サービス料合計金額は内税消費税行の下に表示</inlineHelpText>
        <label>サービス料別表示制御</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShopCode__c</fullName>
        <externalId>true</externalId>
        <label>店舗コード</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>TierDefault__c</fullName>
        <inlineHelpText>店舗別のラックレート設定のTierデフォルト値(Tier1〜Tier8)</inlineHelpText>
        <label>ラックレートTierデフォルト値</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WebSite__c</fullName>
        <label>WebSite</label>
        <type>Url</type>
    </fields>
    <label>店舗情報</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Fax__c</columns>
        <columns>Seq__c</columns>
        <columns>WebSite__c</columns>
        <columns>Email__c</columns>
        <columns>Address__c</columns>
        <columns>ShopCode__c</columns>
        <columns>Phone__c</columns>
        <columns>Post__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <label>店舗名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>